--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,8 @@ body {
 /* Style the header */
 header {
   background-color: #373737;
-  padding: 30px;
+  padding: 0px;
   text-align: center;
-  font-size: 35px;
-  color: white;
 }
 
 /*style for glowing header*/
@@ -23,10 +21,10 @@ header {
 
 @-webkit-keyframes glow {
   from {
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #7A1712, 0 0 20px #7A1712, 0 0 25px #7A1712, 0 0 30px #7A1712, 0 0 35px #7A1712;
+    text-shadow: 0 0 5px , 0 0 10px , 0 0 15px #7A1712, 0 0 20px #7A1712, 0 0 25px #7A1712, 0 0 30px #7A1712, 0 0 35px #7A1712;
   }
 
   to {
-    text-shadow: 0 0 10px #fff, 0 0 20px #9B1003, 0 0 30px #9B1003, 0 0 40px #9B1003, 0 0 50px #9B1003, 0 0 60px #9B1003, 0 0 70px #9B1003;
+    text-shadow: 0 0 10px , 0 0 20px #9B1003, 0 0 30px #9B1003, 0 0 40px #9B1003, 0 0 50px #9B1003, 0 0 60px #9B1003, 0 0 70px #9B1003;
   }
 }
