--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-body {
-  background-color: #white;
-  font-family: garamond, serif;
-}
-
 /* Style the header */
 header {
   background-color: #373737;
@@ -22,7 +17,7 @@ body {
   text-align:center;
 }
 
-#container {
+container {
   color:#999;
   text-transform: uppercase;
   font-size:36px;
@@ -34,12 +29,12 @@ body {
   display:block;
 }
 
-#flip {
+flip {
   height:50px;
   overflow:hidden;
 }
 
-#flip > div > div {
+flip > div > div {
   color:#fff;
   padding:4px 12px;
   height:45px;
@@ -47,17 +42,17 @@ body {
   display:inline-block;
 }
 
-#flip div:first-child {
+flip div:first-child {
   animation: show 5s linear infinite;
 }
 
-#flip div div {
+flip div div {
   background:#42c58a;
 }
-#flip div:first-child div {
+flip div:first-child div {
   background:#4ec7f3;
 }
-#flip div:last-child div {
+flip div:last-child div {
   background:#DC143C;
 }
 
