--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,34 @@
-.mySlides {display:none;}
-
-* {
-  box-sizing: border-box;
-}
-
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #white;
+  font-family: garamond, serif;
 }
 
 /* Style the header */
 header {
-  background-color: #b93a39;
+  background-color: #373737;
   padding: 30px;
   text-align: center;
-  font-size: 35px;
-  color: white;
+  font-size: 45px;
+  color: #fff;
 }
 
-img {
-  float: left;
+/*style for glowing header*/
+
+.glow {
+  font-size: 45px;
+  color: #fff;
+  text-align: center;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 5px , 0 0 10px , 0 0 15px #7A1712, 0 0 20px #7A1712, 0 0 25px #7A1712, 0 0 30px #7A1712, 0 0 35px #7A1712;
+  }
+
+  to {
+    text-shadow: 0 0 10px , 0 0 20px #9B1003, 0 0 30px #9B1003, 0 0 40px #9B1003, 0 0 50px #9B1003, 0 0 60px #9B1003, 0 0 70px #9B1003;
+  }
 }
 
 /* Container for flexboxes */
@@ -27,19 +37,8 @@ section {
   display: flex;
 }
 
-/* Style the navigation menu */
-nav {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  background: #edd6a0;
-  padding: 20px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
+img {
+  float: left;
 }
 
 /* Style the content */
@@ -49,81 +48,4 @@ article {
   flex: 3;
   background-color: #edd6a0;
   padding: 10px;
-}
-
-aside {
-  padding: 20px;
-  background-color: #f5f5f5;
-}
-
-summary {
-  padding: 20px;
-  background: #edd6a0;
-}
-
-/* Style the footer */
-footer {
-  background-color: #b93a39;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-@media (max-width: 600px) {
-  section {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-}
-
-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-/* Pattern styles */
-.container {
-  display: flex;
-}
-
-.left-half {
-  background-color: #f5f5f5;
-  flex: 1;
-  padding: 1rem;
-}
-
-.right-half {
-  background-color: #f5f5f5;
-  flex: 1;
-  padding: 1rem;
-}
-
-div.a {
-  text-align: center;
-  color: #b93a39;
-}
-
-div.b {
-  color: #b93a39;
-}
-
-.centered img {
-  width: 150px;
-  border-radius: 50%;
-}
-
-div {
-  border: 0px;
-  padding: 0px;
-}
-
-.clearfix {
-  overflow: auto;
-}
-
-.video {
-float: right;
-padding: 10px;
 }
