--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: #white;
-  font-family: garamond, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Style the header */
