--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,6 @@ article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: #edd6a0;
+  background-color: #787276;
   padding: 10px;
 }
