--- a/styles.css
+++ b/styles.css
@@ -72,8 +72,9 @@ div {
 }
 
 /*for slideshow images*/
+* {box-sizing: border-box;}
 .mySlides {display: none;}
-img {vertical-align: middle;}
+img {vertical-align: left;}
 
 /* Slideshow container */
 .slideshow-container {
@@ -90,7 +91,7 @@ img {vertical-align: middle;}
   position: absolute;
   bottom: 8px;
   width: 100%;
-  text-align: center;
+  text-align: left;
 }
 
 /* Number text (1/3 etc) */
