--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 
 /* Style the header */
 header {
-  background-color: #373737;
+  background-color: #C5C6D0;
   padding: 30px;
   text-align: center;
   font-size: 45px;
