--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ img {vertical-align: left;}
   position: absolute;
   bottom: 8px;
   width: 100%;
-  text-align: left;
+  text-align: center;
 }
 
 /* Number text (1/3 etc) */
