--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ img {vertical-align: left;}
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
-  display: inline-block;
+  display: left;
   transition: background-color 0.6s ease;
 }
 
