--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header {
 }
 
 .dropdown {
-  position: relative;
+  position: left;
   display: inline-block;
 }
 
@@ -34,6 +34,7 @@ header {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  font-size: 14px;
 }
 
 .dropdown-content a {
