--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,13 @@ header {
 }
 
 .dropdown {
-  position: left;
+  position: relative;
   display: inline-block;
 }
 
 .dropdown-content {
   display: none;
-  position: absolute;
+  position: relative;
   background-color: #f1f1f1;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
