pls change back

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ p {
 
 /* Style the header */
 header {
-  background-color: #379683;
+  background-color: #5CDB95;
   padding: 30px;
   text-align: center;
   font-size: 45px;
