--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ header {
   color: #fff;
 }
 
-/*for dropdown menu*/
 
 
 
@@ -37,6 +36,26 @@ header {
   to {
     text-shadow: 0 0 10px , 0 0 20px #9B1003, 0 0 30px #9B1003, 0 0 40px #9B1003, 0 0 50px #9B1003, 0 0 60px #9B1003, 0 0 70px #9B1003;
   }
+}
+
+/*for dropdown menu*/
+
+div.scrollmenu {
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #777;
 }
 
 /* Container for flexboxes */
