--- a/styles.css
+++ b/styles.css
@@ -191,14 +191,11 @@ img {vertical-align: left;}
   padding: 1rem;
 }
 
-div.a {
+div.film {
   text-align: center;
-  color: #b93a39;
+  color: #white;
 }
 
-div.b {
-  color: #b93a39;
-}
 
 .centered img {
   width: 150px;
