--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ p {
 
 /* Style the header */
 header {
-  background: #EDF5E1;
+  color: #EDF5E1;
   padding: 30px;
   text-align: center;
   font-size: 45px;
@@ -68,7 +68,7 @@ article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: #EDF5E1;
+  color: #EDF5E1;
   padding: 10px;
 }
 
