--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 
 /* Style the header */
 header {
-  color: #EDF5E1;
+  background-color: #EDF5E1;
   padding: 30px;
   text-align: center;
   font-size: 45px;
@@ -66,7 +66,7 @@ article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  color: #EDF5E1;
+  background-color: #EDF5E1;
   padding: 10px;
 }
 
