--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ header {
 }
 
 .navbar a.active {
-  background-color: #04AA6D;
+  background-color: #ad8174;
 }
 
 @media screen and (max-width: 500px) {
