--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ article {
   -webkit-flex: 3;
   -ms-flex: 3;
   flex: 3;
-  background-color: #c7493a;
+  background-color: #a33327;
   padding: 10px;
 }
 
