--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ header {
 }
 
 .navbar a {
-  float: left;
+  float: center;
   padding: 12px;
   color: white;
   text-decoration: none;
@@ -60,9 +60,9 @@ header {
 @media screen and (max-width: 600px) {
   .navbar a {
     float: none;
-    display: block;
+    display: absolute;
     width: 100%;
-    text-align: left;
+    text-align: center;
   }
 }
 
