--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ header {
 .navbar {
   width: 100%;
   background-color: #161616;
-  
+  overflow: auto;
 }
 
 .navbar a {
@@ -57,13 +57,7 @@ header {
   background-color: #ad8174;
 }
 
-@media screen and (max-width: 600px) {
-  .navbar a {
-    float: none;
-    display: absolute;
-    width: 100%;
-    text-align: center;
-  }
+
 }
 
 
