--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,13 @@ header {
   background-color: #ad8174;
 }
 
-
+@media screen and (max-width: 600px) {
+  .navbar a {
+    float: none;
+    display: absolute;
+    width: 100%;
+    text-align: center;
+  }
 }
 
 
