final editing with solved navbar

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,40 @@
 
 body {font-family: Arial, Helvetica, sans-serif;}
 
+
+/*navbar*/
+
+ol,ul {
+	list-style: none;
+}
+
+div.scrollmenu li {
+	display:block;
+	width:23%;
+	float:left;
+	margin-left:0px;
+}
+
+div.scrollmenu {
+  background-color: #161616;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #777;
+}
+
+
+
 /* Style the header */
 header {
   background-color: #a33327;
@@ -33,38 +67,8 @@ header {
   }
 }
 
-.navbar {
-  width: 100%;
-  background-color: #161616;
-  overflow: auto;
-}
 
-.navbar a {
-  float: center;
-  padding: 12px;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
-  width: 25%; /* Four links of equal widths */
-  text-align: center;
-}
 
-.navbar a:hover {
-  background-color: #000;
-}
-
-.navbar a.active {
-  background-color: #ad8174;
-}
-
-@media screen and (max-width: 600px) {
-  .navbar a {
-    float: none;
-    display: absolute;
-    width: 100%;
-    text-align: center;
-  }
-}
 
 
 
