--- a/week2/week2.css
+++ b/week2/week2.css
@@ -1,4 +1,7 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+body {
+font-family: Arial, Helvetica, sans-serif;
+background-color: #ad8174
+}
 
 
 /*navbar*/
@@ -18,6 +21,7 @@ div.scrollmenu {
   background-color: #161616;
   overflow: auto;
   white-space: nowrap;
+  padding-bottom: 15px;
 }
 
 div.scrollmenu a {
@@ -66,4 +70,13 @@ header {
   to {
     text-shadow: 0 0 10px , 0 0 4px #9B1003, 0 0 8px #9B1003, 0 0 12px #9B1003, 0 0 16px #9B1003, 0 0 20px #9B1003, 0 0 24px #9B1003;
   }
+}
+
+
+
+
+div.text {
+  padding-top: 30px;
+  text-align: center;
+  color: 161616;
 }
