--- a/week5/week5.css
+++ b/week5/week5.css
@@ -72,32 +72,40 @@ header {
   }
 }
 
-
-
-
-
-
-
-p {
-	text-align:center;
-	font-size: 16px;
-	padding-left: 10px;
+h2 {
+  text-align: center;
 }
 
-.translate {
-  margin: 40px;
-  border: 0px
-  width: 220px;
-	height: 400px;
-
+section {
+  margin: 20px auto;
+  text-align: center;
 }
 
-
-/* to scale pictures */
-.scale-transition {
-  transition: transform 250ms;
+.recipe-flex {
+  margin: 20px auto;
+  display: flex;
+  align-items: center;
+  width: 50%;
+  justify-content: space-between;
+  text-align: center;
 }
 
-.scale-transition:hover {
-  transform: scale(2)
+.recipe-flex div {
+  display: flex;
+	padding-left: 20px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  align-items: center;
+  text-align: center;
+}
+
+.Randombutton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  width: 40%;
 }
