--- a/week6/week6.css
+++ b/week6/week6.css
@@ -1,6 +1,6 @@
 body {
 font-family: Arial, Helvetica, sans-serif;
-background-color: #161616
+background-color: #FFF5EE
 }
 
 
@@ -9,7 +9,8 @@ background-color: #161616
 ol,ul {
 	list-style: none;
   text-align: center;
-  color: white;
+  color: #161616;
+  margin-right: 20px;
 }
 
 div.scrollmenu li {
@@ -78,7 +79,7 @@ header {
 
 h2 {
   text-align: center;
-  color: white;
+  color: #161616;
 }
 
 section {
@@ -89,7 +90,7 @@ section {
 p {
   text-align: center;
   margin-top: 20px;
-  color: white;
+  color: #161616;
 }
 
 .box-container {
